Wed Mar  5 23:31:21 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* tags.h (SCM_ECONSP, SCM_NECONSP): Bugfix: Discriminate structs
	from pairs with a GLOC in the car.

	* symbols.c (msymbolize): Bugfix: Also initialize SCM_SYMBOL_HASH,
	otherwise `symbol-hash' will behave badly.
	(scm_symbol_hash): Bugfix: Must msymbolize if tc7_ssymbol, othwise
	we get segmentation fault!

	* symbols.c: Added #include "weaks.h".  New functions
 	`builtin-bindings' and `builtin-weak-bindings'.  (These will be
 	moved to an extraneous library when we split libguile.)

Tue Mar  4 19:50:07 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* filesys.c (scm_stat): stat now takes fport arguments too as
	documented in the manual.

Mon Mar  3 07:11:33 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* debug.c (scm_single_step): Bugfix: Call continuation with
	scm_call_continuation instead of throwing to it.

Mon Mar  3 09:07:56 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* ports.c (scm_char_ready_p): bug fix: in SCM_PROC char-ready's
 	argument wasn't declared to be optional.

Sun Mar  2 16:34:40 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* stime.c (scm_init_stime): Add feature "current-time".

Sun Mar  2 06:37:31 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* throw.h: prototype for scm_exit_status.
	* throw.c (scm_handle_by_message): if a 'quit is caught, use its
	args to derive an exit status.  Allows (quit) to work from a
	script.
	(scm_exit_status): new function.
	#include "eq.h".

Sat Mar  1 00:09:15 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* eval.c (scm_deval): Removed some old code.
	(ENTER_APPLY): Bugfix: Reset apply-frame trap on trap as is done
	with the others.
	(ENTER_APPLY, scm_deval): Reset trace flag on apply-frame and
	exit-frame traps.

	* symbols.c (msymbolize): Bugfix: Must initialize property list to
 	SCM_EOL.

	* procs.c: Introduce the existent C function scm_thunk_p at the
	Scheme level as well.
