@@ -1,3 +1,7 @@
+Thu Mar  6 00:53:02 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
+
+	* tags.h, eval.c (iqq): Fixes to comments about SCM_ECONSP.
+
 Wed Mar  5 23:31:21 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
 
 	* tags.h (SCM_ECONSP, SCM_NECONSP): Bugfix: Discriminate structs
